# notes

./: .doc-quality-files.txt.example  .gitignore  .lychee.toml  .markdownlint.yaml  .pre-commit-config.yaml  .sensitive-patterns.example  AGENTS.md  ChatGPT-Github blog setup.md  ChatGPT-Github_blog_setup.md  README.md  SPEC.md  _quarto.yml  index.md  justfile  mkdocs.yml  pyproject.toml  tox.ini
.claude/: rules.md
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: pages.yml
ai/: llm.txt  map.md  site-index.json  site-index.schema.json
code/: SNIPPETS.yaml
data/derived/: references.bib  references.csl.json
data/refs/: tags.yaml
data/refs/shards/00/: sample.jsonl
dev/: IMPLEMENTATION_SUMMARY.md  session-commands.md
docs/: .pages  index.md
docs/notes/: .pages  Go_programming.md  index.md  knowledge-management.md  sample-note.md
docs/notes/blog/: .pages  2025-01-01-hello-world.md
docs/notes/blog/posts/: 2025-01-01-hello-world.md
docs/references/: index.md
notes/: index.md  sample-note.md
notes/blog/: index.md
references/: index.md
scripts/: README.md  check-environment.sh  check-tools.py  clean-environment.sh  clean-tools.py  setup-environment.sh  setup-external-tools.py  show-tox-commands.py  sync-precommit-versions.py  validate-plugins.py
scripts/tools/: TEMPLATE.md  hadolint.md  lychee.md  markdownlint-cli2.md  shellcheck.md  shfmt.md  taplo.md
site_root/: index.html
src/notes/: __init__.py  cli.py
ssg/mkdocs/: adapter.sh
ssg/quarto/: adapter.sh
tests/docs/: test_documentation_quality.py
tests/quality/meta/: test_config_consistency.py
tests/quality/shell/: test_shell_quality.py
tools/: build_refs.py  check_front_matter.py  check_sensitive_info.py  export_ai_index.py  extract_snippets.py  mkdocs_pages.py  validate_refs.py
